# scratch

./: .gitignore  .gitmodules  GPATH  GRTAGS  GTAGS
alda/: castlevania.alda  儿歌.alda  我的歌.alda
christmas/: cath.tex  tree.tex  tree2015.tex
elpy-cs-effect/: elpy-cs-effect.el
epub/: simplicity.epub  simplicity.org  编程箴言.epub  编程箴言.org  谦卑的程序员.epub  谦卑的程序员.org
john/: .Rhistory  0.org  0岁 (Kang Tu's conflicted copy 2017-10-01).org  0岁.org  daycare.org  life.org
leetcode/: p526_beautiful_arrangement.py  p636_exclusive_time.py  p638_shopping_offers.py  p646_max_length_of_pair_chain.py  p652_find_duplicate_subtrees.py  p653_two_sum_4_input_is_a_BST.py  p654_maximum_binary_tree.py  p661_image_smoother.py  p676_implement_magic_dictionary.py  p690_employee_importance.py  p695_max_area_of_island.py  p698_partition_to_k_equal_sum_subsets.py  test_p526_beautiful_arrangement.py  test_p636_exclusive_time.py  test_p638_shopping_offers.py  test_p646_max_length_of_pair_chain.py  test_p652_find_duplicate_subtrees.py  test_p653_two_sum_4_input_is_a_bst.py  test_p654_maximum_binary_tree.py  test_p661_image_smoother.py  test_p676_implement_magic_dictionary.py  test_p690_employee_importance.py  test_p695_max_area_of_island.py  test_p698_partition_to_k_equal_sum_subsets.py
lilypond/: Mixolydian.eps  README.aux  README.ly  README.org  README.out  README.tex  scratch.ly  scratch.midi  scratch.ps
mcp-server/local-search-server-python/: README.md  local_search.py  pyproject.toml
newsTwitterFeedback/: newsTwitterFeedback.py  test_newsTwitterFeedback.py
ngram/: lotr_fellowship.txt  (+2 more)
(+169 files in other folders)
