[project]
name = "local_search"
version = "0.1.0"
description = "A simple MCP local_search server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
local_search = "local_search:main"

